Bug 386453 - Middle click on breadcrumbs of inactive split view does not open folder in new tab
Summary: Middle click on breadcrumbs of inactive split view does not open folder in ne...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: URL navigator (other bugs)
Version First Reported In: 5.52.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: junior-jobs, usability
Depends on:
Blocks:
 
Reported: 2017-11-02 10:02 UTC by Simone Gaiarin
Modified: 2018-11-25 10:28 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.53
Sentry Crash Report:


Attachments
Red circle is where middle click does not work (76.13 KB, image/png)
2018-07-14 14:18 UTC, Simone Gaiarin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Simone Gaiarin 2017-11-02 10:02:22 UTC
I often middle click on one of the folders in the breadcrumbs to open that folder in a new tab. When I have the split view active, this works only on the active half of the view. I need to first activate the other half, in order for the middle click to work.

Left click works also in the inactive view.
Comment 1 Julian Steinmann 2018-07-14 14:01:10 UTC
Thanks for reporting! I cannot reproduce this behavior with Dolphin 18.04.2: The tab does open correctly when I middle click onto a folder in the inactive view. Can you confirm that this issue is also fixed for you?
Comment 2 Simone Gaiarin 2018-07-14 14:18:12 UTC
Created attachment 113929 [details]
Red circle is where middle click does not work

I have added a screenshot to better clarify where i middle click. 

Where middle click works:
- Folders in the inactive view

Where middle click does not works:
- Breadcrumbs the inactive view
Comment 3 Nate Graham 2018-07-14 14:24:52 UTC
Thanks for clarifying! I can confirm.
Comment 4 Julian Steinmann 2018-07-14 14:26:03 UTC
Ah, I misunderstood your description then. Thanks for the quick response and the screenshot.
Comment 5 Thomas Surrel 2018-11-24 19:40:17 UTC
Git commit fc5a98db98a88ba57ed369ed04cb3f0b18b5a3f6 by Thomas Surrel.
Committed on 24/11/2018 at 19:40.
Pushed by thsurrel into branch 'master'.

[KUrlNavigator] Re-activate on mouse middle button click

Summary:
When using the mouse middle button to open a folder when
the kurlnavigator was disabled, it was not re-activated.

Test Plan:
In Dolphin, open the split view and use the mouse middle button
to open a folder in a new tab on the 'disabled' splitted view.

Reviewers: #frameworks, elvisangelaccio, ngraham

Reviewed By: elvisangelaccio, ngraham

Subscribers: ngraham, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D17114

M  +8    -0    src/filewidgets/kurlnavigator.cpp
M  +5    -0    src/filewidgets/kurlnavigator.h

https://commits.kde.org/kio/fc5a98db98a88ba57ed369ed04cb3f0b18b5a3f6