[KUrlNavigator] Re-activate on mouse middle button click

Summary:
When using the mouse middle button to open a folder when
the kurlnavigator was disabled, it was not re-activated.

BUG: 386453

Test Plan:
In Dolphin, open the split view and use the mouse middle button
to open a folder in a new tab on the 'disabled' splitted view.

Reviewers: #frameworks, elvisangelaccio, ngraham

Reviewed By: elvisangelaccio, ngraham

Subscribers: ngraham, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D17114